[gd_scene load_steps=64 format=2]

[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0041.png" type="Texture" id=1]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0042.png" type="Texture" id=2]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0043.png" type="Texture" id=3]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0045.png" type="Texture" id=4]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0044.png" type="Texture" id=5]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0037.png" type="Texture" id=6]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0040.png" type="Texture" id=7]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0039.png" type="Texture" id=8]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0034.png" type="Texture" id=9]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0035.png" type="Texture" id=10]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0036.png" type="Texture" id=11]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0038.png" type="Texture" id=12]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0001.png" type="Texture" id=13]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0004.png" type="Texture" id=14]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0003.png" type="Texture" id=15]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0005.png" type="Texture" id=16]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0007.png" type="Texture" id=17]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0008.png" type="Texture" id=18]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0010.png" type="Texture" id=19]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0013.png" type="Texture" id=20]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0014.png" type="Texture" id=21]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0015.png" type="Texture" id=22]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0011.png" type="Texture" id=23]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0018.png" type="Texture" id=24]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0019.png" type="Texture" id=25]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0020.png" type="Texture" id=26]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0012.png" type="Texture" id=27]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0021.png" type="Texture" id=28]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0024.png" type="Texture" id=29]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0002.png" type="Texture" id=30]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0026.png" type="Texture" id=31]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0027.png" type="Texture" id=32]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0016.png" type="Texture" id=33]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0023.png" type="Texture" id=34]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0025.png" type="Texture" id=35]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0006.png" type="Texture" id=36]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0009.png" type="Texture" id=37]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0022.png" type="Texture" id=38]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0030.png" type="Texture" id=39]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0031.png" type="Texture" id=40]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0032.png" type="Texture" id=41]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0033.png" type="Texture" id=42]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0029.png" type="Texture" id=43]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0028.png" type="Texture" id=44]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0049.png" type="Texture" id=45]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0046.png" type="Texture" id=46]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0055.png" type="Texture" id=47]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0051.png" type="Texture" id=48]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0054.png" type="Texture" id=49]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0058.png" type="Texture" id=50]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0053.png" type="Texture" id=51]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0052.png" type="Texture" id=52]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0059.png" type="Texture" id=53]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0048.png" type="Texture" id=54]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0056.png" type="Texture" id=55]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0050.png" type="Texture" id=56]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0057.png" type="Texture" id=57]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0060.png" type="Texture" id=58]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0047.png" type="Texture" id=59]
[ext_resource path="res://Hostiles/Gem.gd" type="Script" id=60]

[sub_resource type="Animation" id=1]
resource_name = "Spin"
loop = true
step = 0.0172414
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0166667, 0.0333333, 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333, 0.15, 0.166667, 0.183333, 0.2, 0.216667, 0.233333, 0.25, 0.266667, 0.283333, 0.3, 0.316667, 0.333333, 0.35, 0.366667, 0.383333, 0.4, 0.416667, 0.433333, 0.45, 0.466667, 0.483333, 0.5, 0.516667, 0.533333, 0.55, 0.566667, 0.583333, 0.6, 0.616667, 0.633333, 0.65, 0.666667, 0.683333, 0.7, 0.716667, 0.733333, 0.75, 0.766667, 0.783333, 0.8, 0.816667, 0.833333, 0.85, 0.866667, 0.883333, 0.9, 0.916667, 0.933333, 0.95, 0.966667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 30 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 36 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 37 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 33 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 38 ), ExtResource( 34 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 46 ), ExtResource( 59 ), ExtResource( 54 ), ExtResource( 45 ), ExtResource( 56 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 51 ), ExtResource( 49 ), ExtResource( 47 ), ExtResource( 55 ), ExtResource( 57 ), ExtResource( 50 ), ExtResource( 53 ), ExtResource( 58 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 65.6715

[sub_resource type="Animation" id=3]
resource_name = "Despawning"
length = 4.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.05, 1.5, 1.95, 2.5, 2.9, 3.15, 3.5, 3.75, 4, 4.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Gem" type="Node2D" groups=[
"Gem",
]]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 60 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin"
anims/Spin = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Gem",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="DespawnAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Despawning = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="DespawnAnimationPlayer" to="." method="_on_DespawnAnimationPlayer_animation_finished"]
